# code-demo-fm-matcher

./: Dockerfile  LICENSE  README.md  entrypoint.sh  main.py  pyproject.toml  requirements.txt
resources/: prompt_template_nToOne.json  prompt_template_oneToN.json
resources/prompt_templates/: nToN.json  nToOne.json  oneToN.json
test_inputs/: Admissions_Condition_Occurrence.json  Admissions_Condition_Occurrence_ground_truth.csv  Admissions_Person.json  Admissions_Visit_Detail.json  Admissions_Visit_Detail_ground_truth.csv  Admissions_Visit_Occurrence.json  Admissions_Visit_Occurrence_ground_truth.csv  Diagnoses_ICD_Condition_Occurrence.json  Diagnoses_ICD_Condition_Occurrence_ground_truth.csv  Labevents_Measurement.json  Labevents_Measurement_ground_truth.csv  Patients_Person.json  Patients_Person_ground_truth.csv  Patients_Visit_Occurrence.json  Prescriptions_Drug_Exposure.json  Prescriptions_Drug_Exposure_ground_truth.csv  Services_Visit_Detail.json  Services_Visit_Detail_ground_truth.csv  Transfers_Visit_Detail.json  Transfers_Visit_Detail_ground_truth.csv  patients_person.json  simple_example.json  simple_example_ground_truth.csv  testinput.json
utils/: backend.py  config.py  errors.py  model_session_state.py  models.py  processing.py  prompt_building.py  prompt_postprocessing.py  prompt_sending.py  prompting.py  request.py  screen_evaluation.py  screen_feedback.py  screen_load.py  screen_visualize.py  session_state.py  storage.py
