[tool.poetry]
name = "llm-matcher"
version = "0.1.0"
description = ""
authors = ["Marcel Parciak <marcel.parciak@uhasselt.be>", "Brecht Vandevoort <brecht.vandevoort@uhasselt.be>", "Frank Neven <frank.neven@uhasselt.be>", "Liesbet M. Peeters <liesbet.peeters@uhasselt.be", "Stijn Vansummeren <stijn.vansummeren@uhasselt.be"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.29.0"
openai = "^1.7.2"
jinja2 = "^3.1.3"
st-cytoscape = "^0.0.5"
streamlit-extras = "^0.3.6"
textdistance = "^4.6.3"
scikit-learn = "^1.6.1"
plotly = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
